--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,15 +35,8 @@ jobs:
     steps:
       - name: Get code
         uses: actions/checkout@v3
-      - name: Cache dependencies
-        id: cache
-        uses: actions/cache@v3
-        with:
-          path: node_modules
-          key: deps-node-modules-${{ hashFiles('**/package-lock.json') }}
-      - name: Install dependencies
-        if: steps.cache.outputs.cache-hit != 'true'
-        run: npm ci
+      - name: Get and Cache dependencies
+        uses: ./.github/actions/cache-deps
       - name: Build website
         run: npm run build
       - name: Upload artifacts
@@ -66,3 +59,11 @@ jobs:
         run: ls
       - name: Deploy site
         run: echo "Deploying..."
+  
+  information:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Get code
+        uses: actions/checkout@v3
+      - name: Run custom js action
+        uses: ./.github/actions/deploy-to-s3
